dbent-derive/tests/ui/entity_label_no_attr.rs
use dbent::prelude::*;

#[derive(Label)]
struct Test {
    id: Key<Int>,
    data: String,
}

fn main() {}
